<resources>
    <string name="app_name">Tasks</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="due_date">Due date</string>
    <string name="reminder">Reminder</string>
    <string name="Priority">Priority</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="off">Off</string>
    <string name="location">Location</string>
    <string name="no_address_found">No address found!</string>
</resources>
