<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/task"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_action_action_grade" />

        </RelativeLayout>

        <EditText
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="to do"
            android:paddingLeft="15dp"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/due_date"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_action_action_event" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="23.12.2014"
                android:minWidth="200dp"
                android:paddingLeft="15dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/add_due_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/add_due_date"
                android:focusable="false"
                android:hint="23:00"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/reminder"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_action_social_notifications_on" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/add_reminder"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:entries="@array/reminder"
                android:paddingLeft="10dp"></Spinner>

            <EditText
                android:id="@+id/add_reminder_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/add_reminder"
                android:focusable="false"
                android:paddingRight="30dp"
                android:textSize="16sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/add_reminder_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/add_reminder_date"
                android:focusable="false"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/Priority"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/add_priority"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:entries="@array/priority"
            android:paddingLeft="10dp"></Spinner>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/description"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="task description"
            android:lines="5"
            android:paddingLeft="15dp"
            android:textSize="16sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/location"
            android:textSize="20sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_location"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="Enter location"
                android:paddingLeft="15dp"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/find_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingLeft="15dp"
                android:src="@drawable/ic_location"
                android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>